name:           rtChess
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         rtitle

executable rtChess
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   vector,
                   mtl,
                   random
  ghc-options:     -Wall
  other-modules:   
                   Board,
                   Moves,
                   Game,
                   Utils

