name:           rtChess
version:        0.1
cabal-version:  >= 1.8
build-type:     Simple
author:         rtitle

library
  hs-source-dirs:  src
  build-depends:   base >= 4,
                   vector,
                   mtl
  ghc-options:     -Wall
  exposed-modules: Board,
                   Moves,
                   Game,
                   Utils,
                   Eval
                   
executable rtChess
  hs-source-dirs:  src-commandline
  main-is:         Main.hs
  build-depends:   base >= 4,
                   mtl,
                   split,
                   rtChess
  ghc-options:     -Wall
  

test-suite test-rtChess
  hs-source-dirs:  test
  main-is:         Spec.hs
  build-depends:   base >= 4,
                   vector,
                   hspec >= 1.3,
                   rtChess
  type:            exitcode-stdio-1.0
  ghc-options:     -Wall
